<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <de.timroes.paletteviewer.SwatchView
            android:id="@+id/vibrant"
            app:titleText="@string/vibrant"
            app:bodyText="@string/normal_style"
            android:layout_margin="@dimen/spacing_swatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <de.timroes.paletteviewer.SwatchView
            android:id="@+id/vibrant_light"
            app:titleText="@string/vibrant"
            app:bodyText="@string/light_style"
            android:layout_margin="@dimen/spacing_swatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <de.timroes.paletteviewer.SwatchView
            android:id="@+id/vibrant_dark"
            app:titleText="@string/vibrant"
            app:bodyText="@string/dark_style"
            android:layout_margin="@dimen/spacing_swatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <de.timroes.paletteviewer.SwatchView
            android:id="@+id/muted"
            app:titleText="@string/muted"
            app:bodyText="@string/normal_style"
            android:layout_margin="@dimen/spacing_swatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <de.timroes.paletteviewer.SwatchView
            android:id="@+id/muted_light"
            app:titleText="@string/muted"
            app:bodyText="@string/light_style"
            android:layout_margin="@dimen/spacing_swatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <de.timroes.paletteviewer.SwatchView
            android:id="@+id/muted_dark"
            app:titleText="@string/muted"
            app:bodyText="@string/dark_style"
            android:layout_margin="@dimen/spacing_swatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>